--- a/README
+++ b/README
@@ -50,11 +50,11 @@ LICENSE
       modification, are permitted provided that the following conditions
       are met:
 
-      Redistributions of source code (Markdown, plaintext, et. al.) must 
+      1. Redistributions of source code (Markdown, plaintext, et. al.) must 
       retain the above copyright notice, this list of conditions and the
-      following disclaimer as the first lines of this file unmodified.
+      following disclaimer.
 
-      Redistributions in compiled form (HTML, PDF and so on) must reproduce
+      2. Redistributions in compiled form (HTML, PDF and so on) must reproduce
       the above copyright notice, this list of conditions and the following
       disclaimer in the documentation and/or other materials provided with
       the distribution.
@@ -79,10 +79,10 @@ OVERVIEW
 
     cgipaf is a combination of three cgi programs:
     
-         passwd.cgi:       allow users to update their password
-	 viewmailcfg.cgi:  allow users to view their current mail 
+    passwd.cgi:       allow users to update their password
+	  viewmailcfg.cgi:  allow users to view their current mail 
 	                   configuration.
-	 mailcfg.cgi:      update the mail configuration
+	  mailcfg.cgi:      update the mail configuration
 	 
     All programs use PAM for user authentication, systems without PAM
     are only supported if they use the standard password file location
@@ -115,11 +115,6 @@ OVERVIEW
     
     It's possible to use a redirect for the error messages, instead of plain 
     html files.
-
-COPYRIGHT
-
-    Copyright (c) 2002, 2007 Staf Wagemakers.
-
 
 CONFIGURATION
  
