--- a/examples/vacation_cgi/README
+++ b/examples/vacation_cgi/README
@@ -7,21 +7,22 @@ COPYRIGHT NOTICE
 
    The FreeBSD Documentation License
 
-   Copyright (c) 2002 - 2020 Staf Wagemakers.
+   Copyright (c) 2001 - 2020 Staf Wagemakers
 
-   Redistribution and use in source (Markdown, plaintext, et. al.) and
-   "compiled" forms (HTML, PDF and so forth) with or without
-   modification, are permitted provided that the following conditions
-   are met:
+   Redistribution and use in source (plaintext, HTML) and 'compiled' forms
+   (SGML, HTML, PDF, PostScript, RTF and so forth) with or without
+   modification, are permitted provided that the following conditions are
+   met:
 
-   1. Redistributions of source code (Markdown, plaintext, et. al.) must 
-   retain the above copyright notice, this list of conditions and the
-   following disclaimer.
+   1. Redistributions of source code (plaintext, HTML) must retain the
+      above copyright notice, this list of conditions and the following
+      disclaimer.
 
-   2. Redistributions in compiled form (HTML, PDF and so on) must reproduce
-   the above copyright notice, this list of conditions and the following
-   disclaimer in the documentation and/or other materials provided with
-   the distribution.
+   2. Redistributions in compiled form (transformed to other DTDs,
+      converted to PDF, PostScript, RTF and other formats) must reproduce
+      the above copyright notice, this list of conditions and the following
+      disclaimer in the documentation and/or other materials provided with
+      the distribution.
 
    THIS DOCUMENTATION IS PROVIDED "AS IS" AND ANY EXPRESS OR IMPLIED 
    WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF 
@@ -34,3 +35,4 @@ COPYRIGHT NOTICE
    IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR
    OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS DOCUMENTATION,
    EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
+
